<resources>
    <string name="app_name">Exercise Counter</string>
    <string name="my_calendar">Exercise Calendar</string>
    <string name="my_setting">Setting</string>
    <string name="preference_file_key">kr.co.real2lover.exercisecounter.PREFERENCE_FILE_KEY</string>
    <string name="counter_edit">Please Enter the value</string>
    <string name="value">Input the value here.</string>
    <string name="Input">Set</string>
    <string name="Cancel">Cancel</string>
    <string name="select_time">Break Time</string>
    <string name="time">Set time</string>
    <string name="start">START</string>
    <string name="exercise_time">Exercise Time</string>
    <string name="time_to_exercise">Time to exercise!!</string>

    <string name="notification_title">Exercise Stopwatch</string>
    <string name="notification_message">00:00:00</string>
    <string name="ticker_text">It is for Exercise Timer</string>

    <string name="pause">PAUSE</string>
    <string name="watch_continue">CONTINUE</string>
    <string name="stop">STOP</string>
    <string name="text_reset">RESET</string>

<!--    SwitchPreference-->
    <string name="explanation">Explanation</string>
    <string name="explanation_content">
        When the counter changes, the break time starts.
    </string>

    <string name="long_click_explanation">Long Click Explanation</string>
    <string name="long_click_explanation_content">Press Counter long to change the value.</string>

    <string name="setting_alarm_time">alarm_time</string>
    <string name="alarm_time">Exercise break time</string>
    <string name="alarm_break_time_select">Choose the alarm time for a break</string>
    <string name="alarm_set_time">Exercise break time: </string>

    <string name="vibration_select_key">VIBRATION_SELECT_KEY</string>
    <string name="vibration_title">Turn on vibration</string>
    <string name="vibration_text">Turn on vibration when the break time is complete</string>
</resources>